-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2001-12-06  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-resources.h (all): dropped inheritance of RESOURCE_FILE
	* audioio-mp3.h (default_mp3_output_default_bitrate): added
	
2001-11-29  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-fileio.h, eca-fileio-mmap.h, eca-fileio-stream.h (all):
	added support for 64bit files; long ints changed to fpos_t
	in all public interfaces
	* eca-fileio-stream.h (open_stderr): added
	* sample-specs.h (sample_type): renamed to sample_t
	* sample-specs.h (sample_pos_t,sample_rate_t,channel_t): added
	* dynamic-parameters.h (parameter_type): renamed to parameter_t
	
2001-11-19  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
	
	* resource-file.h (is_modified): added
	
2001-10-30  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* samplebuffer.h (all): class de-templatized
	
2001-10-28  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-static-object-maps.h (all): all global functions 
	and variables encapsulated into the ECA_STATIC_OBJECT_MAPS 
	class; from now on, all access to object maps only throuh
	ECA_OBJECT_FACTORY
	* eca-object-map.h (registered_objects): return type changed
	* eca-object-map.h (object_regex): added
	* eca-operator.h (new_expr,clone): changed to const; affect
	all subclasses
	* audioio-plugin.h (audio_io_keyword, audio_io_keyword_regex): added
	* eca-object-factory.h (object_identifier): added
	* eca-object-factory.h (reserve_factory, free_factory): added	
	* eca-object-map.h (keyword_to_expr, expr_to_keyword): added
	* eca-object-factory (register_chain_operator,register_controller): added
			
2001-10-17  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
	
	* eca-chainsetup.h (is_in_use): added
	
2001-10-13  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
	
	* eca-chainsetup.h (options_to_string): added